--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -1,8 +1,20 @@
 {% load i18n %}
 {% load staticfiles %}
 <li class="list-group-item">
-  {% if show_teacher_forms %}
-  <hr class="indicator background{{problem_set.grade}}" width="{{ problem_set.percentage }}%">
+  {% if course.is_taught %}
+  {% with problem_set.student_success as success %}
+  {% spaceless %}
+  {% if success.empty %}
+  <hr class="indicator background1" width="{{ success.empty }}%">
+  {% endif %}
+  {% if success.invalid %}
+  <hr class="indicator background3" width="{{ success.invalid }}%">
+  {% endif %}
+  {% if success.valid %}
+  <hr class="indicator background5" width="{{ success.valid }}%">
+  {% endif %}
+  {% endspaceless %}
+  {% endwith %}
   {% else %}
   <hr class="indicator background{{problem_set.grade}}" width="{{ problem_set.percentage }}%">
   {% endif %}
