--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -112,18 +112,28 @@ $(function() {
   $("#pieChart-{{ problem.pk }}").drawPieChart([
     {value: {{ success.valid }}, color: "#878F28"},
     {value: {{ success.invalid }}, color: "#D7A02C"},
-    {value: {{ success.empty }}, color: "#A92D2D"}
+    {value: {{ success.empty }}, color: "#A92D2D"},
   ]);
   {% for part in problem.parts.all %}
+  {% if show_teacher_forms %}
+  $("#pieChart-{{ problem.pk }}-{{ part.pk }}").drawPieChart([
+    {% with part.student_success as success %}
+    {value: {{ success.valid }}, color: "#878F28"},
+    {value: {{ success.invalid }}, color: "#D7A02C"},
+    {value: {{ success.empty }}, color: "#A92D2D"},
+    {% endwith %}
+  ]);
+  {% else %}
   $("#pieChart-{{ problem.pk }}-{{ part.pk }}").drawPieChart([
     {% if part.pk in valid_parts_ids %}
-    {value: 1, color: "#878F28"}
+    {value: 1, color: "#878F28"},
     {% elif part.pk in invalid_parts_ids %}
-    {value: 1, color: "#D7A02C"}
+    {value: 1, color: "#D7A02C"},
     {% else %}
     {value: 1, color: "#A92D2D"},
     {% endif %}
   ]);
+  {% endif %}
   {% endfor %}
   {% endfor %}
 });
