--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -14,7 +14,7 @@
     <link href="{% static 'css/landing-page.css' %}" rel="stylesheet">
     <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">      
+    <link href="{% static 'css/prettify.css' %}" rel="stylesheet">      
     <link href="{% static 'css/tomo.css' %}" rel="stylesheet">
   </head>
   <body>
