Add link to problem anchor
Move to the problem when its title is clicked in the sidebar.

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -161,7 +161,7 @@
         <ul class="nav nav-stacked" id="sidebar">
           {% for problem in problem_set.problems.all %}
           <li>
-            <a href="{% if show_teacher_forms %}{% url 'problem_progress' problem.pk %}{% else %}#{% endif %}">
+            <a href="{% if show_teacher_forms %}{% url 'problem_progress' problem.pk %}{% else %}#{{ problem.anchor }}{% endif %}">
               {{ problem.title }}
               <span id="pieChart-{{ problem.pk }}" class="chart" style="float: right"></span>
             </a>
