--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -38,6 +38,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {# Translators: Link for logout in navigation bar (top right) #}
                     <li><a href="{% url 'logout' %}?next={% url 'login' %}">{{ user.get_full_name }} {% trans "(logout)" %}</a></li>
+                    <li><a href="{% url 'help' %}"><i style="top: -0.7em; height: 0em; position: relative"; class="fa fa-question-circle fa-2x"></i><span class="sr-only">{% trans 'Help' %}</span></a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -71,6 +72,10 @@
                 <div class="col-lg-12">
                     
                     <ul class="list-inline">
+                        <li><a href="{% url 'help' %}">{% trans 'Help' %}</a></li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li><a href="https://github.com/matijapretnar/projekt-tomo">GitHub</a></li>
+                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="{% url 'terms_of_service' %}">{% trans 'Terms of service' %}</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="mailto:info@projekt-tomo.si">{% trans 'Contact' %}</a></li>
